attached_assets/Pasted-SyntaxError-File-unknown-line-1-Units-Sold-SyntaxError-invalid-syntax-Traceback-File-hom-1745956584841.txt
SyntaxError: File "<unknown>", line 1 Units Sold ^ SyntaxError: invalid syntax
Traceback:
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/exec_code.py", line 121, in exec_func_with_error_handling
    result = func()
             ^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 639, in code_to_exec
    _mpa_v1(self._main_script_path)
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 159, in _mpa_v1
    page.run()
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/streamlit/navigation/page.py", line 297, in run
    exec(code, module.__dict__)
File "/home/runner/workspace/pages/Advanced_Statistics.py", line 313, in <module>
    model = ols(formula, data=test_data).fit()
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/statsmodels/base/model.py", line 203, in from_formula
    tmp = handle_formula_data(data, None, formula, depth=eval_env,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/statsmodels/formula/formulatools.py", line 63, in handle_formula_data
    result = dmatrices(formula, Y, depth, return_type='dataframe',
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/highlevel.py", line 319, in dmatrices
    (lhs, rhs) = _do_highlevel_design(
                 ^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/highlevel.py", line 164, in _do_highlevel_design
    design_infos = _try_incr_builders(
                   ^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/highlevel.py", line 56, in _try_incr_builders
    return design_matrix_builders(
           ^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/build.py", line 743, in design_matrix_builders
    factor_states = _factors_memorize(all_factors, data_iter_maker, eval_env)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/build.py", line 393, in _factors_memorize
    which_pass = factor.memorize_passes_needed(state, eval_env)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/eval.py", line 504, in memorize_passes_needed
    subset_names = [name for name in ast_names(self.code) if name in env_namespace]
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/eval.py", line 504, in <listcomp>
    subset_names = [name for name in ast_names(self.code) if name in env_namespace]
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/patsy/eval.py", line 111, in ast_names
    for node in ast.walk(ast.parse(code)):
                         ^^^^^^^^^^^^^^^
File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^